[gd_scene load_steps=11 format=3 uid="uid://c1co1f0xwktv1"]

[ext_resource type="Script" path="res://levels/level_class.gd" id="1_m1t4c"]
[ext_resource type="FontFile" uid="uid://cyv5okyo2hgew" path="res://assets/poco.ttf" id="2_5terk"]
[ext_resource type="Script" path="res://levels/level_camera.gd" id="3_cywl2"]
[ext_resource type="PackedScene" uid="uid://cymvpxtr5hvfj" path="res://objects/player.tscn" id="4_866er"]
[ext_resource type="TileSet" uid="uid://dnx1extlu8pxs" path="res://assets/sprites/tiles.tres" id="5_65twu"]
[ext_resource type="Texture2D" uid="uid://bj18c5gdkp3oh" path="res://assets/aseprite/background_1.png" id="6_d2b62"]
[ext_resource type="TileSet" uid="uid://orhoddg6nkpl" path="res://assets/sprites/spikes.tres" id="7_47v7g"]
[ext_resource type="PackedScene" uid="uid://dvigbor1cvnbw" path="res://objects/disintegratingplatform.tscn" id="8_p30s3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61ngw"]
size = Vector2(768, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dduow"]
size = Vector2(64, 18)

[node name="Level#16" type="Node2D"]
script = ExtResource("1_m1t4c")
room_name = "Keep Jumping!"

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="RoomName" type="Label" parent="Canvas"]
z_index = 10
offset_top = 454.0
offset_right = 640.0
offset_bottom = 487.0
theme_override_fonts/font = ExtResource("2_5terk")
theme_override_font_sizes/font_size = 20
text = "Sample Room Name"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Canvas"]
offset_top = 464.0
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.196078, 0.196078, 0.196078, 0.588235)
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)
scale = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 480
script = ExtResource("3_cywl2")

[node name="Player" parent="." instance=ExtResource("4_866er")]
position = Vector2(101, 380)
max_jump_height = 80.0
jump_time_to_peak = 0.4
jump_time_to_descend = 0.35

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("5_65twu")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 1, 131072, 1, 1, 196608, 1, 1, 262144, 1, 1, 327680, 1, 1, 393216, 1, 1, 458752, 1, 1, 524288, 1, 1, 589824, 1, 1, 655360, 1, 1, 720896, 1, 1, 786432, 1, 1, 851968, 1, 1, 917504, 1, 1, 983040, 1, 1, 1048576, 1, 1, 1114112, 1, 1, 1179648, 1, 1, 1245184, 1, 1, 1310720, 1, 1, 1376256, 1, 1, 1441792, 1, 1, 1507328, 1, 1, 1572864, 1, 1, 1638400, 1, 1, 1703936, 1, 1, 1769472, 1, 1, 1835008, 1, 1, 1900544, 65537, 1, 1900545, 65537, 1, 1900546, 65537, 1, 1900547, 65537, 1, 1900548, 65537, 1, 1900549, 65537, 1, 1900550, 65537, 1, 1900551, 65537, 1, 1900552, 65537, 1, 65575, 131073, 1, 131111, 131073, 1, 196647, 131073, 1, 262183, 131073, 1, 327719, 131073, 1, 393255, 131073, 1, 458791, 131073, 1, 524327, 131073, 1, 589863, 131073, 1, 655399, 131073, 1, 720935, 131073, 1, 786471, 131073, 1, 852007, 131073, 1, 917543, 131073, 1, 983079, 131073, 1, 1048615, 131073, 1, 1114151, 131073, 1, 1179687, 131073, 1, 1245223, 131073, 1, 1310759, 131073, 1, 1376295, 131073, 1, 1441831, 131073, 1, 1507367, 131073, 1, 1572903, 131073, 1, 1638439, 131073, 1, 1703975, 131073, 1, 1769511, 131073, 1, 1835047, 131073, 1, 1900583, 65537, 1, 39, 131073, 0, 1, 65537, 0, 5, 65537, 0, 6, 65537, 0, 7, 65537, 0, 8, 65537, 0, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 13, 65537, 0, 14, 65537, 0, 15, 65537, 0, 16, 65537, 0, 22, 65537, 0, 23, 65537, 0, 24, 65537, 0, 25, 65537, 0, 26, 65537, 0, 27, 65537, 0, 28, 65537, 0, 29, 65537, 0, 30, 65537, 0, 31, 65537, 0, 32, 65537, 0, 33, 65537, 0, 34, 65537, 0, 35, 65537, 0, 4, 65537, 0, 3, 65537, 0, 2, 65537, 0, 1900560, 589825, 0, 1900562, 589825, 0, 1900561, 589825, 0, 1900563, 589825, 0, 1900564, 589825, 0, 1900565, 589825, 0, 1900566, 589825, 0, 1900568, 589825, 0, 1900567, 589825, 0, 1900569, 589825, 0, 1900570, 589825, 0, 1900571, 589825, 0, 1900572, 589825, 0, 1900573, 589825, 0, 1900574, 589825, 0, 1900575, 589825, 0, 1900576, 589825, 0, 1900577, 589825, 0, 1900578, 589825, 0, 1900579, 589825, 0, 1900580, 589825, 0, 1900581, 589825, 0, 1900582, 589825, 0, 36, 65537, 0, 37, 65537, 0, 38, 65537, 0, 17, 65537, 0, 1900559, 589825, 0, 1900558, 589825, 0, 1900556, 589825, 0, 1900557, 589825, 0, 1900555, 589825, 0, 1900554, 589825, 0, 1900553, 589825, 0)

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(320, 240)
scale = Vector2(2, 2)
texture = ExtResource("6_d2b62")
metadata/_edit_lock_ = true

[node name="SpikeMap" type="TileMap" parent="."]
tile_set = ExtResource("7_47v7g")
format = 2

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(320, 504)
shape = SubResource("RectangleShape2D_61ngw")

[node name="WinZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinZone"]
position = Vector2(320, 2)
shape = SubResource("RectangleShape2D_dduow")

[node name="DisintegratingPlatform" parent="." instance=ExtResource("8_p30s3")]
position = Vector2(321, 48)

[node name="DisintegratingPlatform2" parent="." instance=ExtResource("8_p30s3")]
position = Vector2(337, 48)

[node name="DisintegratingPlatform3" parent="." instance=ExtResource("8_p30s3")]
position = Vector2(305, 48)

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="body_entered" from="WinZone" to="." method="_on_win_zone_body_entered"]
